--- a/views/edit_company.hbs
+++ b/views/edit_company.hbs
@@ -8,9 +8,9 @@
 
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <label class="input-group-text" for="INFO_NO">資訊類別</label>
+              <label class="input-group-text new-title" for="INFO_NO">資訊類別</label>
             </div>
-            <select class="custom-select" id="INFO_NO" name="INFO_NO" required>
+            <select class="custom-select new-title" id="INFO_NO" name="INFO_NO" required>
               <option value="" hidden>請選擇</option>
               <option value="{{info.INFO_NO}}" selected disabled>{{info.INFO_NAME}}</option>
             </select>
@@ -18,9 +18,9 @@
 
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text">資訊內容</span>
+              <span class="input-group-text new-title">資訊內容</span>
             </div>
-            <textarea type="text" class="form-control" name="INFO_DES" placeholder="請輸入資訊內容..." aria-label="inputDes"
+            <textarea type="text" class="form-control new-des" name="INFO_DES" placeholder="請輸入資訊內容..." aria-label="inputDes"
               aria-describedby="des" rows="10" required>{{ info.INFO_DES }}</textarea>
           </div>
 
