--- a/views/edit_greet.hbs
+++ b/views/edit_greet.hbs
@@ -8,9 +8,9 @@
 
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text">{{result.GREET_NAME}}</span>
+              <span class="input-group-text new-title">{{result.GREET_NAME}}</span>
             </div>
-            <textarea type="text" class="form-control" name="GREET_DES" placeholder="請輸入回覆內容...." aria-label="inputDes"
+            <textarea type="text" class="form-control new-des" name="GREET_DES" placeholder="請輸入回覆內容...." aria-label="inputDes"
               aria-describedby="des" rows="10">{{ result.GREET_DES }}</textarea>
           </div>
 
