--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,10 +18,11 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
     rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
+  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   <link href="/stylesheets/style.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="bg-light">
   <!-- 導入webchat視窗 -->
   <script>!(function () {
       let e = document.createElement("script"),
@@ -53,22 +54,15 @@
     })();
   </script>
   <!-- Navigation-->
-  <nav class="navbar navbar navbar-dark bg-dark mb-5" id="mainNav">
-    <div class="container px-4 px-lg-5">
-      <a class="navbar-brand navbar-light" href="/">設定{{companyName}}小幫手</a>
-      {{!-- <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ms-auto py-4 py-lg-0">
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/company">公司資訊</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/greet">通知問候</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/position">職缺設定</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/default">預設回覆</a></li>
-        </ul>
-      </div> --}}
+  <header>
+    <nav class="navbar navbar-dark bg-dark" style="font-weight:bold;">
+      <a class="navbar-brand" href="/">
+        設定{{companyName}}小幫手
+      </a>
       <h1 style="color: #fff;">ChatBot設定</h1>
       <button class="btn btn-light mx-3">Logout</button>
-
-    </div>
-  </nav>
+    </nav>
+  </header>
 
 {{{body}}}
 
