--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
   <link href="/stylesheets/style.css" rel="stylesheet" />
 </head>
 
-<body class="bg-light">
+<body>
   <!-- 導入webchat視窗 -->
   <script>!(function () {
       let e = document.createElement("script"),
@@ -64,8 +64,9 @@
     </nav>
   </header>
 
-{{{body}}}
-
+  <div class="container">
+    {{{body}}}
+  </div>
   <!-- Footer-->
   <footer class="main-footer">
     <h3 class="footer-text">Internet Information Co., Ltd All Rights Reserve</h3>
