--- a/views/company.hbs
+++ b/views/company.hbs
@@ -9,20 +9,20 @@
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
-                <div class="col-12 d-flex justify-content-between" style="border: 1px solid black;">
-                  <div class="row d-flex m-3">
-                    <div class="col-12 d-flex align-items-center label-title">
+                <div class=" item-wrapper" style="border: 1px solid black;">
+                  <div class=" my-2 item-title">
+                    <div class="label-title">
                       {{this.INFO_NAME}}
                     </div>
-                    <div class="col-12 mt-3">
-                      <p class="des-text">{{ this.INFO_DES }}</p>
-                    </div>
                   </div>
-                  <div class="col-4 d-flex flex-row justify-content-center align-items-center">
-                    <a href="/company/{{ this.INFO_NO}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
+                  <div class="item-des">
+                    <p class="des-text">{{ this.INFO_DES }}</p>
+                  </div>
+                  <div class="d-flex justify-content-center item-buttons">
+                    <a href="/company/{{ this.INFO_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
-                    <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
+                    <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.INFO_NO }}"
                         data-name="{{ this.INFO_NAME }}" data-category="company">
                         刪除
