--- a/views/greet.hbs
+++ b/views/greet.hbs
@@ -9,24 +9,19 @@
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
-                <div class="col-12 d-flex justify-content-between" style="border: 1px solid black;">
-                  <div class="row d-flex m-3">
-                    <div class="col-12 d-flex align-items-center label-title">
+                <div class=" item-wrapper" style="border: 1px solid black;">
+                  <div class=" my-2 item-title">
+                    <div class="label-title">
                       {{this.GREET_NAME}}
                     </div>
-                    <div class="col-12 mt-3">
-                      <p class="des-text">{{ this.GREET_DES }}</p>
-                    </div>
                   </div>
-                  <div class="col-4 d-flex flex-row justify-content-center align-items-center">
-                    <a href="/greet/{{ this.GREET_NO}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
+                  <div class="item-des">
+                    <p class="des-text">{{ this.GREET_DES }}</p>
+                  </div>
+                  <div class="d-flex justify-content-center item-buttons">
+                    <a href="/greet/{{ this.GREET_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
-                    {{!-- <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
-                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.GREET_NO }}"
-                        data-name="{{ this.GREET_NAME }}" data-category="greet">
-                        刪除
-                    </button> --}}
                   </div>
                 </div>
               </div>
@@ -38,12 +33,6 @@
     </div>
   </div>
   <div class="col-10 my-5 d-flex  justify-content-center">
-    {{!-- <div class="col-6">
-      <div class="row justify-content-center">
-        <a href="/greet/new" class="btn btn-outline-primary col-8" id="create-btn"
-          style="font-size: 1.5rem;">新增資訊</a>
-      </div>
-    </div> --}}
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/" class="btn btn-outline-dark col-8" id="create-btn"
