--- a/views/position.hbs
+++ b/views/position.hbs
@@ -1,6 +1,6 @@
 <div class="row d-flex flex-column align-items-center all">
   <h1 class="m-5">職缺資訊</h1>
-   <div class="col-9 wrapper">
+  <div class="col-9 wrapper">
     {{> message}}
     <div class="scroll-view">
       <ul class="list-group">
@@ -9,20 +9,20 @@
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
-                <div class="col-12 d-flex justify-content-between" style="border: 1px solid black;">
-                  <div class="row d-flex m-3">
-                    <div class="col-12 d-flex align-items-center label-title">
+                <div class=" item-wrapper" style="border: 1px solid black;">
+                  <div class=" my-2 item-title">
+                    <div class="label-title">
                       {{this.POSITION_NAME}}
                     </div>
-                    <div class="col-12 mt-3">
-                      <p class="des-text">{{ this.POSITION_DES }}</p>
-                    </div>
                   </div>
-                  <div class="col-4 d-flex flex-row justify-content-center align-items-center">
-                    <a href="/position/{{ this.POSITION_NO}}/edit" class="btn btn-primary col-6" style="font-size: 1rem; height:fit-content;">
+                  <div class="item-des">
+                    <p class="des-text">{{ this.POSITION_DES }}</p>
+                  </div>
+                  <div class="d-flex justify-content-center item-buttons">
+                    <a href="/position/{{ this.POSITION_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
-                    <button class="col-6 btn btn-danger mx-3 my-auto" style="font-size:medium; height:fit-content"
+                    <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.POSITION_NO }}"
                         data-name="{{ this.POSITION_NAME }}" data-category="position">
                         刪除
