feat: add item-wrapper

--- a/views/greet.hbs
+++ b/views/greet.hbs
@@ -9,7 +9,7 @@
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
-                <div class=" item-wrapper" style="border: 1px solid black;">
+                <div class=" item-wrapper">
                   <div class=" my-2 item-title">
                     <div class="label-title">
                       {{this.GREET_NAME}}
