--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,10 +13,10 @@ body{
 .list-group-item{
   background:none;
 }
-
+/* 
 .list-group li > div {
   background: #fff;
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -219,7 +219,10 @@ color:#fff;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto, auto;
+  background: #fff;
   width:100%;
+  border: 1px solid #111;
+  border-radius: 15px;
 }
 
 .item-title,
