feat: add font style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -147,7 +147,8 @@ input:invalid {
   height: 80vh;
 }
 
-.alert-danger {
+.alert-danger,
+.alert-waning {
   font-size: 1rem;
   font-weight: bold;
 }
