feat: add defaultRes.hbs, edit_defaultRes.hbs and routes/defaultRes.js

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 
       <div class="col-8 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">預設回覆:</label>
-        <a href="/default" class="btn btn-primary active col-3" role="button">設定</a>
+        <a href="/defaultRes" class="btn btn-primary active col-3" role="button">設定</a>
       </div>
     </div>
   </div>
