--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -55,12 +55,12 @@
   </script>
   <!-- Navigation-->
   <header>
-    <nav class="navbar navbar-dark bg-dark" style="font-weight:bold;">
+    <nav class="navbar navbar-dark bg-primary" style="font-weight:bold;">
       <a class="navbar-brand" href="/">
         設定{{companyName}}小幫手
       </a>
-      <h1 style="color: #fff;">ChatBot設定</h1>
-      <button class="btn btn-light mx-3">Logout</button>
+      {{!-- <h1 style="color: #fff;">ChatBot設定</h1> --}}
+      <a class="btn btn-secondary my-2 my-sm-0" role="button">Logout</a>
     </nav>
   </header>
 
