--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -240,6 +240,7 @@ color:#fff;
   display: flex;
   align-items: center;
   justify-content: start;
+  padding: 1rem;
 }
 
 /* .rw-conversation-container .rw-message {
