--- a/views/defaultRes.hbs
+++ b/views/defaultRes.hbs
@@ -1,25 +1,25 @@
 <div class="row d-flex flex-column align-items-center all">
-  <h1 class="m-5">通知問候</h1>
+  <h1 class="m-5">預設回覆</h1>
   <div class="col-9 wrapper">
     {{> message}}
     <div class="scroll-view">
       <ul class="list-group">
         <div class="row d-flex justify-content-center" id="data-panel">
-          {{#each greetInfo}}
+          {{#each defaultInfo}}
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
                 <div class=" item-wrapper">
                   <div class=" my-2 item-title">
                     <div class="label-title">
-                      {{this.GREET_NAME}}
+                      {{this.DEFAULT_NAME}}
                     </div>
                   </div>
                   <div class="item-des">
-                    <p class="des-text">{{ this.GREET_DES }}</p>
+                    <p class="des-text">{{ this.DEFAULT_DES }}</p>
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
-                    <a href="/greet/{{ this.GREET_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
+                    <a href="/defaultRes/{{ this.DEFAULT_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                   </div>
