--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -23,3 +23,16 @@
 </div>
 {{/each}}
 {{/if}}
+
+{{#if errorMsg}}
+{{#each errorMsg}}
+<div class="col-12 mt-4">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{this.message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+</div>
+{{/each}}
+{{/if}}
