feat: add register.hbs,  login function and error alert

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -60,7 +60,7 @@
         設定{{companyName}}小幫手
       </a>
       {{!-- <h1 style="color: #fff;">ChatBot設定</h1> --}}
-      <a class="btn btn-secondary my-2 my-sm-0" role="button">Logout</a>
+      <a href="/users/logout" class="btn btn-secondary my-2 my-sm-0" role="button">Logout</a>
     </nav>
   </header>
 
