--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,7 @@
       <form action="/users/login" method="post">
         <div class="form-group">
           <label for="email">帳號</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="請輸入公司E-mail">
+          <input type="email" id="email" name="email" class="form-control" placeholder="請輸入E-mail">
         </div>
         <div class="form-group">
           <label for="password">密碼</label>
