--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -24,15 +24,30 @@
 {{/each}}
 {{/if}}
 
-{{#if errorMsg}}
-{{#each errorMsg}}
-<div class="col-12 mt-4">
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    {{this.message}}
+{{!-- 這邊的錯誤提醒只會有一個，沒有用到#each，所以不需要用this.XXX，直接將本體印出即可 --}}
+{{#if warning_msg}}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {{warning_msg}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     </div>
-</div>
-{{/each}}
+{{/if}}
+
+{{#if success_msg}}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    {{success_msg}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+{{/if}}
+
+{{#if errorMsg}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{errorMsg}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
 {{/if}}
