--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
-
 <div class="row">
   <div class="col-12 mx-auto">
+    {{> message}}
     <div class="row d-flex mx-auto justify-content-center">
       <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
       <div class="col-8 d-flex align-items-center justify-content-center">
