--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,18 +5,33 @@
       {{> message}}
       <form action="/users/register" method="post">
         <div class="form-group">
-          <label for="name">公司代碼</label>
+          <label for="cpy_no">公司代碼</label>
           <input type="text" id="cpy_no" name="cpy_no" class="form-control" placeholder="請輸入公司統編" value="{{ cpy_no }}">
         </div>
+
         <div class="form-group">
-          <label for="name">產業代碼</label>
-          <input type="text" id="industry_no" name="industry_no" class="form-control" placeholder="請輸入產業代碼" value="{{ industry_no }}">
+          <label for="cpy_name">公司名稱</label>
+          <input type="text" id="cpy_name" name="cpy_name" class="form-control" placeholder="請輸入公司名稱" value="{{ cpy_name }}">
         </div>
+
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" class="form-control" placeholder="請輸入信箱"
             value="{{ email }}">
         </div>
+
+        <div class="form-group">
+          <label for="industry_no">產業別</label>
+          <select name="industry_no" id="industry_no" class="form-control">
+            <option value="" selected hidden>請選擇</option>
+            {{#each industryInfo}}
+            <option value="{{this.INDUSTRY_ID}}">
+            {{this.INDUSTRY_NAME}}
+            </option>
+            {{/each}}
+          </select>
+        </div>
+
         <div class="form-group">
           <label for="isadmin">權限</label>
           <select name="isadmin" id="isadmin" class="form-control">
@@ -25,16 +40,19 @@
             <option value="0" {{#is isadmin '0'}} selected {{/is}}>一般使用者</option>
           </select>
         </div>
+
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="請輸入密碼"
             value="{{ password }}">
         </div>
+
         <div class="form-group">
           <label for="confirmPassword">Confirm Password</label>
           <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
             placeholder="請再次輸入密碼" value="{{ confirmPassword }}">
         </div>
+
         <button type="submit" class="btn btn-primary btn-block">註冊</button>
       </form>
       <p class="lead mt-4">
