--- a/views/edit_company.hbs
+++ b/views/edit_company.hbs
@@ -1,5 +1,5 @@
-<div class="row mt-5">
-  <div class="col-md-8 m-auto">
+<div class="row m-5">
+  <div class="col-8 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">編輯公司資訊</h1>
       {{> message}}
@@ -16,7 +16,7 @@
             </select>
           </div>
 
-          <div class="input-group mb-3">
+          <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text new-title">資訊內容</span>
             </div>
