--- a/views/edit_position.hbs
+++ b/views/edit_position.hbs
@@ -1,5 +1,5 @@
-<div class="row mt-5">
-  <div class="col-md-8 m-auto">
+<div class="row m-5">
+  <div class="col-8 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">編輯職位</h1>
       {{> message}}
