--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,23 +1,43 @@
 <div class="row">
-  <div class="col-12 mx-auto">
+  <div class="col-12 mx-auto home">
     {{> message}}
-    <div class="row d-flex mx-auto justify-content-center">
+    <div class="row col-6 d-flex mx-auto justify-content-center">
       <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
       <div class="col-8 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">公司資訊:</label>
         <a href="/company" class="btn btn-success active col-3" role="button">設定</a>
       </div>
+    </div> 
 
-      <div class="col-8 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">通知問候:</label>
-        <a href="/greet" class="btn btn-primary active col-3" role="button">設定</a>
-      </div>
-
+    <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-8 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">職缺設定:</label>
         <a href="/position" class="btn btn-success active col-3" role="button">設定</a>
       </div>
+    </div>
 
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">補助津貼:</label>
+        <a href="/subsidy" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">假別設定:</label>
+        <a href="/leave" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">通知問候:</label>
+        <a href="/greet" class="btn btn-primary active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-8 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">預設回覆:</label>
         <a href="/defaultRes" class="btn btn-primary active col-3" role="button">設定</a>
