--- a/views/edit_position.hbs
+++ b/views/edit_position.hbs
@@ -1,14 +1,14 @@
 <div class="row m-5">
   <div class="col-8 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mt-3">編輯職位</h1>
+      <h1 class="text-center mt-3">編輯職缺</h1>
       {{> message}}
       <form action="/position/{{result.POSITION_NO}}?_method=PUT" method="POST">
         <div class="modal-body">
 
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <label class="input-group-text new-title" for="category">職位名稱</label>
+              <label class="input-group-text new-title" for="category">職缺名稱</label>
             </div>
             <select class="custom-select new-title" id="category" name="category" required>
               <option value="" hidden>請選擇</option>
@@ -18,7 +18,7 @@
 
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text new-title">職位資訊</span>
+              <span class="input-group-text new-title">職缺資訊</span>
             </div>
             <textarea type="text" class="form-control new-des" name="POSITION_DES" placeholder="請輸入職位需求、工作內容、薪資" aria-label="inputDes"
               aria-describedby="des" rows="10" required>{{ result.POSITION_DES }}</textarea>
