--- a/views/subsidy.hbs
+++ b/views/subsidy.hbs
@@ -5,26 +5,26 @@
     <div class="scroll-view">
       <ul class="list-group">
         <div class="row d-flex justify-content-center" id="data-panel">
-          {{#each leaveInfo}}
+          {{#each subsidyInfo}}
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
                 <div class=" item-wrapper">
                   <div class=" my-2 item-title">
                     <div class="label-title">
-                      {{this.LEAVE_NAME}}
+                      {{this.SUBSIDY_NAME}}
                     </div>
                   </div>
                   <div class="item-des">
-                    <p class="des-text">{{ this.LEAVE_DES }}</p>
+                    <p class="des-text">{{ this.SUBSIDY_DES }}</p>
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
-                    <a href="/company/{{ this.LEAVE_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
+                    <a href="/subsidy/{{ this.SUBSIDY_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
-                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.LEAVE_NO }}"
-                        data-name="{{ this.LEAVE_NAME }}" data-category="subsidy">
+                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.SUBSIDY_NO }}"
+                        data-name="{{ this.SUBSIDY_NAME }}" data-category="subsidy">
                         刪除
                     </button>
                   </div>
@@ -69,7 +69,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-        <form action="/company/{{ this.SUBSIDY_ID }}" method="post" style="display:inline-block;" id="delete-form">
+        <form action="/company/{{ this.SUBSIDY_NO }}" method="post" style="display:inline-block;" id="delete-form">
           <button type="submit" class="btn btn-danger">確定</button>
         </form>
       </div>
