--- a/views/leave.hbs
+++ b/views/leave.hbs
@@ -1,30 +1,30 @@
 <div class="row d-flex flex-column align-items-center all">
-  <h1 class="m-5">補助津貼</h1>
+  <h1 class="m-5">假別資訊</h1>
   <div class="col-9 wrapper">
     {{> message}}
     <div class="scroll-view">
       <ul class="list-group">
         <div class="row d-flex justify-content-center" id="data-panel">
-          {{#each subsidyInfo}}
+          {{#each leaveInfo}}
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
                 <div class=" item-wrapper">
                   <div class=" my-2 item-title">
                     <div class="label-title">
-                      {{this.SUBSIDY_NAME}}
+                      {{this.LEAVE_NAME}}
                     </div>
                   </div>
                   <div class="item-des">
-                    <p class="des-text">{{ this.SUBSIDY_DES }}</p>
+                    <p class="des-text">{{ this.LEAVE_DES }}</p>
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
-                    <a href="/subsidy/{{ this.SUBSIDY_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
+                    <a href="/subsidy/{{ this.LEAVE_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
-                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.SUBSIDY_NO }}"
-                        data-name="{{ this.SUBSIDY_NAME }}" data-category="subsidy">
+                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.LEAVE_NO }}"
+                        data-name="{{ this.LEAVE_NAME }}" data-category="subsidy">
                         刪除
                     </button>
                   </div>
@@ -40,7 +40,7 @@
   <div class="col-10 my-5 d-flex">
     <div class="col-6">
       <div class="row justify-content-center">
-        <a href="/subsidy/new" class="btn btn-outline-warning col-8" id="create-btn"
+        <a href="/leave/new" class="btn btn-outline-warning col-8" id="create-btn"
           style="font-size: 1.5rem;">新增資訊</a>
       </div>
     </div>
@@ -65,11 +65,11 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>確定要刪除<strong id="delete-position">{{ this.SUBSIDY_NAME }}</strong>?</p> 
+        <p>確定要刪除<strong id="delete-position">{{ this.LEAVE_NAME }}</strong>?</p> 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-        <form action="/subsidy/{{ this.SUBSIDY_NO }}" method="post" style="display:inline-block;" id="delete-form">
+        <form action="/leave/{{ this.LEAVE_NO }}" method="post" style="display:inline-block;" id="delete-form">
           <button type="submit" class="btn btn-danger">確定</button>
         </form>
       </div>
