feat: add new_leave.hbs and add new leave func

--- a/views/leave.hbs
+++ b/views/leave.hbs
@@ -41,7 +41,7 @@
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/leave/new" class="btn btn-outline-warning col-8" id="create-btn"
-          style="font-size: 1.5rem;">新增資訊</a>
+          style="font-size: 1.5rem;">新增假別</a>
       </div>
     </div>
     <div class="col-6">
