--- a/views/subsidy.hbs
+++ b/views/subsidy.hbs
@@ -41,7 +41,7 @@
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/subsidy/new" class="btn btn-outline-warning col-8" id="create-btn"
-          style="font-size: 1.5rem;">新增資訊</a>
+          style="font-size: 1.5rem;">新增補助津貼</a>
       </div>
     </div>
     <div class="col-6">
