--- a/views/leave.hbs
+++ b/views/leave.hbs
@@ -19,12 +19,12 @@
                     <p class="des-text">{{ this.LEAVE_DES }}</p>
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
-                    <a href="/subsidy/{{ this.LEAVE_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
+                    <a href="/leave/{{ this.LEAVE_NO}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.LEAVE_NO }}"
-                        data-name="{{ this.LEAVE_NAME }}" data-category="subsidy">
+                        data-name="{{ this.LEAVE_NAME }}" data-category="leave">
                         刪除
                     </button>
                   </div>
