--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,59 @@
+{{#if isAdmin}}
 <div class="row">
+  <div class="col-6 mx-auto mt-3">
+  {{> message}}
+  </div>
   <div class="col-12 mx-auto home">
-    {{> message}}
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">新增新公司:</label>
+        <a href="/users/register" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div> 
+
+    {{!-- <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">職缺設定:</label>
+        <a href="/position" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">補助津貼:</label>
+        <a href="/subsidy" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">假別設定:</label>
+        <a href="/leave" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">通知問候:</label>
+        <a href="/greet" class="btn btn-primary active col-3" role="button">設定</a>
+      </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-8 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">預設回覆:</label>
+        <a href="/defaultRes" class="btn btn-primary active col-3" role="button">設定</a>
+      </div>
+    </div> --}}
+  </div>
+</div>
+{{else}}
+<div class="row">
+  <div class="col-6 mx-auto mt-3">
+  {{> message}}
+  </div>
+  <div class="col-12 mx-auto home">
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <a href="/train" class="btn btn-dark active mx-3" role="button" hidden>Train</a>
       <div class="col-8 d-flex align-items-center justify-content-center">
@@ -45,3 +98,4 @@
     </div>
   </div>
 </div>
+{{/if}}
