--- a/views/new_company.hbs
+++ b/views/new_company.hbs
@@ -13,7 +13,7 @@
             <select class="custom-select new-title" id="category" name="category" required>
               <option value="" selected hidden>請選擇</option>
               {{#each category}}
-              <option value="{{this.INFO_NO}}">{{this.INFO_NAME}}</option>
+              <option value="{{this.INFO_ID}}">{{this.INFO_NAME}}</option>
               {{/each}}
             </select>
           </div>
