--- a/views/register.hbs
+++ b/views/register.hbs
@@ -54,6 +54,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary btn-block">註冊</button>
+        <a href="/" class="btn btn-block" role="button">返回</a>
       </form>
       <p class="lead mt-4">
         已經有帳號了?<a href="/users/login" style="color: blue;">登入</a>
