--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -167,7 +167,13 @@ input:invalid {
   font-weight: bold; 
   color: #111;
   padding: 1rem;
+}
 
+.label-des {
+  font-size: 20px;
+  font-weight: normal; 
+  color: #111;
+  padding: 1rem;
 }
 
 .new-title,
