feat: add admin delete func and admin add new position func

--- a/views/new_adminPositionInfo.hbs
+++ b/views/new_adminPositionInfo.hbs
@@ -3,7 +3,7 @@
     <div class="card card-body">
       <h1 class="text-center mt-3">新增職缺類別</h1>
       {{> message}}
-      <form action="/position" method="POST">
+      <form action="/adminPositionInfo" method="POST">
         <div class="modal-body">
 
           <div class="input-group">
