feat: add industry filter func to adminPositionInfo.hbs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -254,6 +254,11 @@ color:#fff;
   flex-wrap: wrap;
 }
 
+.industry-filter-wrapper{
+  width: 100%;
+  font-size: 1.5rem;
+}
+
 /* .rw-conversation-container .rw-message {
   flex-wrap: nowrap !important;
 } */
