feat: 修改selected顯示方式

--- a/views/adminPositionInfo.hbs
+++ b/views/adminPositionInfo.hbs
@@ -8,7 +8,7 @@
           <option value="">全部顯示</option>
           {{#forEach industryInfo}}
           <option value="{{INDUSTRY_NAME}}" {{#is INDUSTRY_NAME ../industryFilter}} selected {{/is}}
-          {{#is INDUSTRY_NAME 'Admin'}} disabled hidden {{/is}} id="select-item">{{INDUSTRY_NAME}}</option>
+          {{#is INDUSTRY_NAME 'Admin'}} disabled hidden {{/is}}>{{INDUSTRY_NAME}}</option>
           {{/forEach}}
         </select>
       </form> 
