--- a/views/new_adminPositionInfo.hbs
+++ b/views/new_adminPositionInfo.hbs
@@ -36,7 +36,7 @@
 
         </div>
         <div class="modal-footer">
-          <a href="/position" class="btn btn-outline-info">取消</a>
+          <a href="/adminPositionInfo" class="btn btn-outline-info">取消</a>
           <button type="submit" class="btn btn-primary confirm-btn" id="confirm-create">新增</button>
         </div>
       </form>
