feat: 修改辦帳號權限

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,6 +13,9 @@
           <input type="password" id="password" name="password" class="form-control" placeholder="請輸入密碼">
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <p class="lead mt-4">
+        還沒有帳號?<a href="/users/register" style="color: blue;">註冊</a>
+      </p>
     </div>
   </div>
 </div>
