feat: add admin delete type of leave func

--- a/views/adminLeaveInfo.hbs
+++ b/views/adminLeaveInfo.hbs
@@ -32,7 +32,7 @@
                   <div class="d-flex justify-content-center item-buttons">
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.LEAVE_ID }}"
-                        data-name="{{ this.LEAVEe_NAME }}" data-category="adminLeaveInfo">
+                        data-name="{{ this.LEAVE_NAME }}" data-category="adminLeaveInfo">
                         刪除
                     </button>
                   </div>
