feat: add adminSearch

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,6 +38,13 @@
         <label class="m-5 label-title">公司補助類別:</label>
         <a href="/adminSubsidyInfo" class="btn btn-success active col-3" role="button">設定</a>
       </div>
+    </div>
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-10 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">各公司回覆查詢:</label>
+        <a href="/adminSearch" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
     </div> 
 
   </div>
