feat: add admin delete type of subsidy func and add new type of subsidy func

--- a/views/adminSubsidyInfo.hbs
+++ b/views/adminSubsidyInfo.hbs
@@ -20,11 +20,11 @@
                 <div class=" item-wrapper">
                   <div class=" my-2 item-title">
                     <div class="d-flex">
-                      <div class="label-title">假別名稱：</div>
+                      <div class="label-title">補助類別名稱：</div>
                       <div class="label-des">{{this.SUBSIDY_NAME}}</div>
                     </div>
                     <div class="d-flex">
-                      <div class="label-title">假別英文名稱：</div>
+                      <div class="label-title">補助類別英文名稱：</div>
                       <div class="label-des">{{this.SUBSIDY_ENTITY_NAME}}</div>
                     </div>
                     
