feat: 增加新增欄位說明

--- a/views/new_adminLeaveInfo.hbs
+++ b/views/new_adminLeaveInfo.hbs
@@ -15,10 +15,12 @@
 
           <div class="input-group pt-3">
             <div class="input-group-prepend">
-              <span class="input-group-text new-title">公司假別英文名稱</span>
+              <span class="input-group-text new-title col-12">公司假別英文名稱</span>
             </div>
             <input type="text" class="form-control new-des" name="leave_entity_name" placeholder="請輸入公司假別英文名稱" value="{{leave_entity_name}}" required>
           </div>
+          <p>假別英文名稱後方請加上「_leave」</p>
+          <p>ex.產假的假別英文名稱為maternity_leave</p>
 
         </div>
         <div class="modal-footer">
