--- a/views/new_adminSubsidyInfo.hbs
+++ b/views/new_adminSubsidyInfo.hbs
@@ -19,6 +19,8 @@
             </div>
             <input type="text" class="form-control new-des" name="subsidy_entity_name" placeholder="請輸入公司補助類別英文名稱" value="{{subsidy_entity_name}}" required>
           </div>
+          <p>補助類別英文名稱後方請加上「_subsidy」</p>
+          <p>ex.育兒補助的補助類別英文名稱為children_subsidy</p>
 
         </div>
         <div class="modal-footer">
